<resources>

    <!-- Strings -->

    <string name="app_name">Quiz App</string>
    <string name="app_title">My Quiz App</string>
    <string name="question1">Question 1</string>
    <string name="firstQuestion">In the movie, Marvel\'s Avengers: Infinity War, who is said to have created Mjolnir and the Infinity Guantlet that Thanos wields?</string>
    <string name="q1A">Bor</string>
    <string name="q1B">Odin</string>
    <string name="q1C">Thanos</string>
    <string name="q1D">Eitri</string>
    <string name="question2">Question 2</string>
    <string name="secondQuestion">Arthur Douglas, was resurrected as ____________ by Kronos to annhilate Thanos.</string>
    <string name="q2A">Drax the Destroyer</string>
    <string name="q2B">Star Lord</string>
    <string name="q2C">Molecule Man</string>
    <string name="q2D">Silver Surfer</string>
    <string name="question3">Question 3</string>
    <string name="thirdQuestion">Created by Hank Pym, who makes their appearance in the Avengers, issue 54?</string>
    <string name="q3A">Ultron</string>
    <string name="q3B">Wasp</string>
    <string name="q3C">Vision</string>
    <string name="q3D">Ant Man</string>
    <string name="question4">Question 4</string>
    <string name="fourthQuestion">In various interviews, who is said to be Stan Lee\'s favorite superhero?</string>
    <string name="q4A">Iron Man</string>
    <string name="q4B">Mr. Fantastic</string>
    <string name="q4C">Wolverine</string>
    <string name="q4D">Spider Man</string>
    <string name="question5">Question 5</string>
    <string name="fifthQuestion">In the comics, who is Star Lord\'s father?</string>
    <string name="q5A">Ego</string>
    <string name="q5B">Reed Richards</string>
    <string name="q5C">J\'son</string>
    <string name="q5D">Adam Warlock</string>
    <string name="q5hint">YOUR ANSWER</string>
    <string name="question6">Question 6</string>
    <string name="sixthQuestion">Which superhero is carried to the sun, as a funeral pyre, when he dies shortly after Asgard is destroyed?</string>
    <string name="q6A">Odin</string>
    <string name="q6B">Thor</string>
    <string name="q6C">Sentry/Void</string>
    <string name="q6D">Loki</string>
    <string name="question7">Question 7</string>
    <string name="seventhQuestion">Of the following, who has NOT been a herald of Galactus?</string>
    <string name="q7A">Scarlett Witch</string>
    <string name="q7B">Silver Surfer</string>
    <string name="q7C">Hulk</string>
    <string name="q7D">Nova</string>
    <string name="question8">Question 8</string>
    <string name="eighthQuestion">Which superhero made their appearance fighting the Hulk in the Incredible Hulk, issue 180?</string>
    <string name="q8A">Red Hulk</string>
    <string name="q8B">Wolverine</string>
    <string name="q8C">She Hulk</string>
    <string name="q8D">Spider Man</string>
    <string name="question9">Question 9</string>
    <string name="ninthQuestion">Of the below, which superhero alter ego is widely believed to be the smartest?</string>
    <string name="q9A">Tony Stark</string>
    <string name="q9B">Reed Richards</string>
    <string name="q9C">Bruce Banner</string>
    <string name="q9D">Hank Pym</string>
    <string name="question10">Question 10</string>
    <string name="tenthQuestion">Which Marvel characters made their first appearance in the Invincible Iron Man, issue 55?</string>
    <string name="q10A">The Mandarin</string>
    <string name="q10B">Drax the Destroyer</string>
    <string name="q10C">Ronan the Accuser</string>
    <string name="q10D">Thanos</string>
    <string name="results">Results</string>

    <!-- Navigation -->

    <string name="start_button">Start Quiz</string>
    <string name="next">Next Question</string>
    <string name="previous">Previous Question</string>
    <string name="finish">Finish Quiz</string>
    <string name="exit_to_start">Exit To Main Menu</string>
    <string name="restart">Restart Quiz</string>
</resources>
