<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    tools:context="com.example.android.quizapp.Question2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/question2"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="48dp"
            android:gravity="center"
            android:text="@string/second_question"
            android:textSize="36sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="userAnswer"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:text="@string/q2A"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="userAnswer"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:text="@string/q2B"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/c"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="userAnswer"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:text="@string/q2C"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/d"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="userAnswer"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:text="@string/q2D"
                android:textSize="24sp" />

        </RadioGroup>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:onClick="questionThree"
        android:text="@string/next"
        android:textAllCaps="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:onClick="backButton"
        android:text="@string/previous" />
</RelativeLayout>
