<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    tools:context="com.example.android.quizapp.Question1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/question1"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="48dp"
            android:gravity="center"
            android:text="@string/first_question"
            android:textSize="36sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="userAnswer"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:text="@string/q1A"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="userAnswer"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:text="@string/q1B"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/c"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="userAnswer"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:text="@string/q1C"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/d"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="userAnswer"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:text="@string/q1D"
                android:textSize="24sp" />

        </RadioGroup>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="questionTwo"
        android:text="@string/next"
        android:textAllCaps="true" />
</RelativeLayout>
