<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.quizapp.Question9">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/question9"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/questionTextSize"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/questionMarginBottom"
            android:layout_marginTop="@dimen/questionMarginTop"
            android:gravity="center"
            android:text="@string/ninthQuestion"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/questionTextSize"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="userAnswer"
                android:paddingLeft="@dimen/radioButtonPadding"
                android:paddingRight="@dimen/radioButtonPadding"
                android:text="@string/q9A"
                android:textColor="@color/primaryTextColor"
                android:textSize="@dimen/answerTextSize"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/radioButtonMargin"
                android:onClick="userAnswer"
                android:paddingLeft="@dimen/radioButtonPadding"
                android:paddingRight="@dimen/radioButtonPadding"
                android:text="@string/q9B"
                android:textColor="@color/primaryTextColor"
                android:textSize="@dimen/answerTextSize"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/c"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/radioButtonMargin"
                android:onClick="userAnswer"
                android:paddingLeft="@dimen/radioButtonPadding"
                android:paddingRight="@dimen/radioButtonPadding"
                android:text="@string/q9C"
                android:textColor="@color/primaryTextColor"
                android:textSize="@dimen/answerTextSize"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/d"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/radioButtonMargin"
                android:onClick="userAnswer"
                android:paddingLeft="@dimen/radioButtonPadding"
                android:paddingRight="@dimen/radioButtonPadding"
                android:text="@string/q9D"
                android:textColor="@color/primaryTextColor"
                android:textSize="@dimen/answerTextSize"
                android:textStyle="bold" />

        </RadioGroup>

    </LinearLayout>

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha=".3"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="@dimen/navButtonBotMarg"
        android:layout_marginEnd="@dimen/navButtonSideMarg"
        android:layout_marginRight="@dimen/navButtonSideMarg"
        android:onClick="questionTen"
        android:text="@string/next"
        android:textAllCaps="true"
        android:textColor="@color/primaryTextColor" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/navButtonBotMarg"
        android:layout_marginLeft="@dimen/navButtonSideMarg"
        android:layout_marginStart="@dimen/navButtonSideMarg"
        android:onClick="backButton"
        android:text="@string/previous"
        android:textAllCaps="true"
        android:textColor="@color/primaryTextColor" />
</RelativeLayout>
