<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.quizapp.Question5">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha=".3"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/question5"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/questionTextSize"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/questionMarginBottom"
            android:layout_marginTop="@dimen/questionMarginTop"
            android:gravity="center"
            android:text="@string/fifthQuestion"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/questionTextSize"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/userText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/editTextMargin"
            android:hint="@string/q5hint"
            android:inputType="textCapCharacters"
            android:textColor="@color/primaryTextColor"
            android:textColorHint="@color/primaryTextColor" />

    </LinearLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="@dimen/navButtonBotMarg"
        android:layout_marginEnd="@dimen/navButtonSideMarg"
        android:layout_marginRight="@dimen/navButtonSideMarg"
        android:onClick="questionSix"
        android:text="@string/next"
        android:textAllCaps="true"
        android:textColor="@color/primaryTextColor" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/navButtonBotMarg"
        android:layout_marginLeft="@dimen/navButtonSideMarg"
        android:layout_marginStart="@dimen/navButtonSideMarg"
        android:onClick="backButton"
        android:text="@string/previous"
        android:textAllCaps="true"
        android:textColor="@color/primaryTextColor" />
</RelativeLayout>
